--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
           <img src="assets/img/logo.png" alt="Bodily logo" />
         </div>
         <div class="menu">
-          <ul>
+          <ul class="links">
             <li><a href="#home">Home</a></li>
             <li><a href="#calculator">BMI Calculator</a></li>
           </ul>
